# rtb-t3d

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  allProjects.txt
.reuse/: dep5
Engine/: CMakeLists.txt
Engine/cmake/Scripts/: setup_game.cmake  setup_nasm.cmake
Engine/lib/: CMakeLists.txt
Engine/lib/buildFiles/config/: libs.conf  libs.mac.conf
Engine/lib/cmake/collada/: CMakeLists.txt
Engine/lib/cmake/convexDecomp/: CMakeLists.txt
Engine/lib/cmake/libjpeg/: CMakeLists.txt
Engine/lib/cmake/libmng/: CMakeLists.txt
Engine/lib/cmake/libogg/: CMakeLists.txt
Engine/lib/cmake/libpng/: CMakeLists.txt
Engine/lib/cmake/libtheora/: CMakeLists.txt
Engine/lib/cmake/libungif/: CMakeLists.txt
Engine/lib/cmake/libvorbis/: CMakeLists.txt
Engine/lib/cmake/opcode/: CMakeLists.txt
Engine/lib/cmake/pcre/: CMakeLists.txt
Engine/lib/cmake/squish/: CMakeLists.txt
Engine/lib/cmake/tinyxml/: CMakeLists.txt
Engine/lib/cmake/zlib/: CMakeLists.txt
Engine/lib/convexDecomp/: NvHashMap.h  NvRemoveTjunctions.cpp  NvThreadConfig.cpp
Engine/lib/opcode/Ice/: IceFPU.h  IcePreprocessor.h
Engine/lib/pcre/: config.h
Engine/source/: CMakeLists.txt  advancedLighting.cmake  basicLighting.cmake  collada.cmake  core.cmake  dsound.cmake  openal.cmake  t3d.cmake  theora.cmake
Engine/source/T3D/: groundPlane.cpp  item.cpp  lightFlareData.cpp  proximityMine.h
Engine/source/T3D/fx/: particleEmitter.cpp  particleEmitter.h  precipitation.cpp
Engine/source/T3D/turret/: aiTurretShape.h
Engine/source/app/: mainLoop.cpp  version.cpp
Engine/source/app/net/: serverQuery.cpp  serverQuery.h
Engine/source/console/: CMDscan.cpp  bison.bat  cmdgram.cpp  cmdgram.h  console.cpp  consoleFunctions.cpp  consoleInternal.h  debugOutputConsumer.h  engineAPI.h  generateCompiler.bat
Engine/source/core/: frameAllocator.h
Engine/source/core/strings/: stringFunctions.cpp  stringFunctions.h
Engine/source/core/util/: path.h  str.cpp  swizzle.h  uuid.cpp
Engine/source/core/util/journal/: process.h
Engine/source/gfx/: gFont.cpp  gfxAPI.cpp  gfxDevice.cpp  gfxEnums.h  gfxInit.cpp  gfxVertexFormat.h
Engine/source/gfx/D3D9/: d3dx9Functions.h  gfxD3D9CardProfiler.cpp  gfxD3D9Cubemap.cpp  gfxD3D9Device.cpp  gfxD3D9Device.h  gfxD3D9Device.regen-states.cpp  gfxD3D9EnumTranslate.h  gfxD3D9OcclusionQuery.cpp  gfxD3D9PrimitiveBuffer.cpp  gfxD3D9Shader.cpp  gfxD3D9StateBlock.cpp  gfxD3D9TextureManager.cpp  gfxD3D9TextureObject.cpp  gfxD3D9VertexBuffer.cpp  screenshotD3D9.cpp  videoCaptureD3D9.cpp
Engine/source/gfx/D3D9/pc/: gfxPCD3D9Device.cpp
Engine/source/gfx/bitmap/: gBitmap.cpp
Engine/source/gfx/gl/: gfxGLDevice.win.cpp
Engine/source/gui/controls/: guiTextEditCtrl.cpp
Engine/source/gui/core/: guiCanvas.cpp  guiControl.cpp
Engine/source/lighting/advanced/hlsl/: gBufferConditionerHLSL.cpp
Engine/source/lighting/shadowMap/: lightShadowMap.cpp
Engine/source/main/: main.cpp
Engine/source/materials/: materialManager.cpp  shaderData.cpp
Engine/source/math/: mMathAltivec.cpp
Engine/source/platform/: platform.cpp  platform.h  platformCPUCount.cpp  platformInput.h  platformIntrinsics.gcc.h  platformIntrinsics.visualc.h  platformNet.cpp  platformNetAsync.cpp  platformVolume.cpp  types.gcc.h  types.visualc.h
Engine/source/platform/nativeDialogs/: msgBox.cpp
Engine/source/platform/threads/: threadPool.cpp
Engine/source/platformMac/: macCarbCPUInfo.cpp  macCarbFileio.mm  macCarbFont.cpp  macCarbFont.h  macMain.mm
Engine/source/platformMac/menus/: popupMenu.cpp
Engine/source/platformWin32/: winFileio.cpp  winProcessControl.cpp  winVolume.cpp  winWindow.cpp
Engine/source/platformWin32/threads/: thread.cpp
Engine/source/platformX86UNIX/: platformX86UNIX.h  x86UNIXFileio.cpp  x86UNIXMain.cpp  x86UNIXOpenAL.client.cpp
Engine/source/postFx/: postEffect.cpp
Engine/source/renderInstance/: renderParticleMgr.cpp  renderTexTargetBinManager.h
Engine/source/scene/: reflectionManager.cpp
Engine/source/sfx/: sfxDescription.cpp  sfxDevice.h  sfxProfile.cpp  sfxSystem.cpp  sfxTrack.cpp
Engine/source/sfx/fmod/: sfxFMODBuffer.cpp  sfxFMODDevice.h  sfxFMODProvider.cpp
Engine/source/sfx/media/: sfxVorbisStream.cpp
Engine/source/shaderGen/: shaderGen.cpp
Engine/source/shaderGen/HLSL/: shaderGenHLSLInit.cpp
Engine/source/sim/: actionMap.cpp
Engine/source/ts/: tsMesh.cpp  tsMesh.h  tsMeshIntrinsics.cpp  tsShapeConstruct.h
Engine/source/ts/arch/: tsMeshIntrinsics.arch.h
Engine/source/util/: settings.cpp
Engine/source/windowManager/: platformInterface.cpp  windowInputGenerator.cpp
Engine/source/windowManager/mac/: macView.h  macView.mm  macWindow.mm
Engine/source/windowManager/win32/: win32Window.cpp  win32Window.h
LICENSES/: LicenseRef-GLX-Public-License-1.0.txt  LicenseRef-Nvidia-Fxaa-3.11-sample.txt  LicenseRef-mod_dav-1.0.txt  LicenseRef-rfc-4122-sample.txt
Templates/: CMakeLists.txt
Templates/Empty/: .gitignore  CMakeLists.txt
Templates/Full/: CMakeLists.txt
Templates/Full/buildFiles/config/: project.conf  project.mac.conf  projectCode.conf
Templates/Full/game/: main.cs
Templates/Full/game/art/datablocks/: datablockExec.cs  player.cs
Templates/Full/game/art/shapes/actors/Soldier/: soldier_rigged.cs
Templates/Full/game/art/shapes/actors/Soldier/FP/: FP_SoldierArms.cs
Templates/Full/game/art/shapes/weapons/ProxMine/: materials.cs
Templates/Full/game/core/scripts/client/: audio.cs  defaults.cs  metrics.cs
Templates/Full/game/core/scripts/client/lighting/advanced/: init.cs
Templates/Full/game/core/scripts/gui/: guiMusicPlayer.cs  optionsDlg.cs
Templates/Full/game/scripts/client/: client.cs  default.bind.cs  defaults.cs  init.cs
Templates/Full/game/scripts/server/: defaults.cs  gameCore.cs  scriptExec.cs
Templates/Full/game/tools/worldEditor/: main.cs
Templates/Full/game/tools/worldEditor/gui/: objectBuilderGui.ed.gui
Templates/Full/game/tools/worldEditor/scripts/: menuHandlers.ed.cs  menus.ed.cs
Templates/Full/source/: torqueConfig.h
Tools/: CMakeLists.txt
Tools/dae2dts/: .gitignore  CMakeLists.txt
(+40 files in other folders)
